--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,2 +1,7 @@
 @import "../../node_modules/react-grid-layout/css/styles.css";
 @import "../../node_modules/react-resizable/css/styles.css";
+
+.label-style{
+    text-align: center;
+    font-size: 24px;
+};
