--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -5,3 +5,9 @@
     text-align: center;
     font-size: 24px;
 };
+
+body {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-weight: 300;
+    font-size: 14px;
+  }
