Check in latest

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -36,3 +36,71 @@ table{
     border: 1.25px solid black;
     text-align: center;
 }
+
+
+//From https://stackoverflow.com/questions/17584702/how-to-add-a-scrollbar-to-an-html5-table
+//https://stackoverflow.com/users/226241/sausagefingers
+/* this is for the main container of the table, also sets the height of the fixed header row */
+.headercontainer {
+    position: relative;
+    border: 1px solid #222;
+    padding-top: 37px;
+    background: #000;
+  }
+  /* this is for the data area that is scrollable */
+  .tablecontainer {
+    overflow-y: auto;
+    //height: 150px; //TODO Change this to match height of component - Header Height
+    background: #fff;
+  }
+  
+  /* remove default cell borders and ensures table width 100% of its container*/
+  .tablecontainer table {
+    border-spacing: 0;
+    width:100%;
+  }
+  
+  /* add a thin border to the left of cells, but not the first */
+  .tablecontainer td + td {
+    border-left:1px solid #eee; 
+  }
+  
+  /* cell padding and bottom border */
+  .tablecontainer td, th {
+    border-bottom:1px solid #eee;
+    padding: 10px;
+  }
+  
+
+
+  /* make the default header height 0 and make text invisible */
+  .tablecontainer th {
+      height: 0px;
+      padding-top: 0;
+      padding-bottom: 0;
+      line-height: 0;
+      visibility: hidden;
+      white-space: nowrap;
+  }
+  
+  /* reposition the divs in the header cells and place in the blank area of the headercontainer */
+  .tablecontainer th div{
+    visibility: visible;
+    position: absolute;
+    background: #000;
+    color: #fff;
+    padding: 9px 10px;
+    top: 0;
+    margin-left: -10px;
+    line-height: normal;
+     border-left: 1px solid #222;
+  }
+  /* prevent the left border from above appearing in first div header */
+  th:first-child div{
+    border: none;
+  }
+  
+  /* alternate colors for rows */
+  .tablecontainer tbody  tr:nth-child(even){
+       background-color: #ddd;
+  }
